[package]
name = "repro-fs"
version = "0.1.0"
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.30.3", features = ["binstart"] }
anyhow = "1.0"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
